--- a/index.html
+++ b/index.html
@@ -13,49 +13,59 @@
    <div class="wrapper">
       <div class="weather">
          <div class="weather__card">
+
             <div class="weather__search">
-               <input type="text" class="weather__input" placeholder="Enter city name ">
-               <button class="weather__button"><img src="assets/images/search.png" alt="Search"></button>
+               <input id="weather__input" type="text" class="weather__input" placeholder="Enter city name ">
+               <button id="weather__button" class="weather__button"><img src="assets/images/search.png"
+                     alt="Search"></button>
             </div>
-            <div class="weather__card-mid">
-               <div class="weather__card-img">
-                  <img src="assets/images/snow.png" alt="image">
-               </div>
-               <div class="weather__card-temp">
-                  <p class="weather_temp"></p>
-               </div>
-               <div class="weather__card-city">
-                  <p class="weather_city"></p>
-               </div>
-
-            </div>
-            <div class="weather__card-bottom">
-               <div class="weather__humidity">
-                  <div class="weather__humidity-img">
-                     <img src="assets/images/humidity.png" alt="image">
+            <p class="weather__error">
+               INVALID CITY NAME
+            </p>
+            <div class="weather__wrapper">
+               <div class="weather__card-mid">
+                  <div class="weather__card-img">
+                     <img class="weather__icon" src="assets/images/snow.png" alt="image">
                   </div>
-                  <div class="weather__info-humidity">
-                     <p class="weather__humidity-perecentage"></p>
-                     <h4 class="weather__humidity-title">Humidity</h4>
+                  <div class="weather__card-temp">
+                     <p id="weather_temp" class="weather_temp"></p>
+                  </div>
+                  <div class="weather__card-city">
+                     <p id="weather_city" class="weather_city"></p>
                   </div>
 
-
                </div>
-               <div class="weather__wind">
-                  <div class="weather__wind-img">
-                     <img src="assets/images/wind.png" alt="image">
-                  </div>
-                  <div class="weather__info-humidity">
-                     <p class="weather__wind-speed"></p>
-                     <h4 class="weather__wind-title">Wind Speed</h4>
-                  </div>
+               <div class="weather__card-bottom">
+                  <div class="weather__humidity">
+                     <div class="weather__humidity-img">
+                        <img src="assets/images/humidity.png" alt="image">
+                     </div>
+                     <div class="weather__info-humidity">
+                        <p id="weather__humidity-perecentage" class="weather__humidity-perecentage"></p>
+                        <h4 class="weather__humidity-title">Humidity</h4>
+                     </div>
 
+
+                  </div>
+                  <div class="weather__wind">
+                     <div class="weather__wind-img">
+                        <img src="assets/images/wind.png" alt="image">
+                     </div>
+                     <div class="weather__info-humidity">
+                        <p id="weather__wind-speed" class="weather__wind-speed"></p>
+                        <h4 class="weather__wind-title">Wind Speed</h4>
+                     </div>
+
+                  </div>
                </div>
             </div>
          </div>
       </div>
    </div>
-   <script src="js/index.js"></script>
+   <script src="js/index.js">
+
+
+   </script>
 </body>
 
 </html>
