--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="weather__wrapper">
                <div class="weather__card-mid">
                   <div class="weather__card-img">
-                     <img class="weather__icon" src="assets/images/snow.png" alt="image">
+                     <img class="weather__icon" alt="image">
                   </div>
                   <div class="weather__card-temp">
                      <p id="weather_temp" class="weather_temp"></p>
